{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 44,
  "lineage": "dc8dc55a-ab5e-c0ea-25bb-cbe28aa2fc36",
  "resources": [
    {
      "module": "module.vpc-uat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07220b756463d4665",
            "public_dns": "ec2-52-57-112-47.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.57.112.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "uat-nat-gw-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00bf4df89758c561b",
            "public_dns": "ec2-35-157-61-16.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.157.61.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "uat-nat-gw-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0836db98c50064324",
            "public_dns": "ec2-18-196-84-10.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.196.84.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-gw-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06fc6fd838d939e8d",
            "public_dns": "ec2-52-29-61-128.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.61.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-gw-2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-010ae3f6072da2aac",
            "public_dns": "ec2-3-126-41-43.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.41.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-gw-3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-uat",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05f471eff76aa2d00",
            "owner_id": "425301710226",
            "tags": {
              "Name": "uat-igw"
            },
            "vpc_id": "vpc-0b51494f3322647ad"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08e0c9af0443046c4",
            "owner_id": "425301710226",
            "tags": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-075895e8d932a23f9"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-uat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07220b756463d4665",
            "id": "nat-0dc081dfabc041abf",
            "network_interface_id": "eni-092749fd86e084a2a",
            "private_ip": "10.100.1.181",
            "public_ip": "52.57.112.47",
            "subnet_id": "subnet-070582c2dab76ea73",
            "tags": {
              "Name": "uat-nat-gw-1"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bf4df89758c561b",
            "id": "nat-0d7233f8fd93a7c79",
            "network_interface_id": "eni-0b0a8a41d69f39f55",
            "private_ip": "10.100.2.47",
            "public_ip": "35.157.61.16",
            "subnet_id": "subnet-046eb021e421fb421",
            "tags": {
              "Name": "uat-nat-gw-2"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0836db98c50064324",
            "id": "nat-0bb0dd0121b23aece",
            "network_interface_id": "eni-0a1617dbc9165a994",
            "private_ip": "10.0.1.203",
            "public_ip": "18.196.84.10",
            "subnet_id": "subnet-0c6f9062c766243f1",
            "tags": {
              "Name": "dev-nat-gw-1"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06fc6fd838d939e8d",
            "id": "nat-0f5b97a7f512c2dbb",
            "network_interface_id": "eni-080b219f0bf4427ae",
            "private_ip": "10.0.2.140",
            "public_ip": "52.29.61.128",
            "subnet_id": "subnet-0c826456b502ed673",
            "tags": {
              "Name": "dev-nat-gw-2"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010ae3f6072da2aac",
            "id": "nat-0e0fd3e3cedd77ec8",
            "network_interface_id": "eni-0a03c2fd214aac256",
            "private_ip": "10.0.3.68",
            "public_ip": "3.126.41.43",
            "subnet_id": "subnet-068f2b2dea9ebfa88",
            "tags": {
              "Name": "dev-nat-gw-3"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-uat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02fa8095573a4ac74",
            "owner_id": "425301710226",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0dc081dfabc041abf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-route-private-subnet-1"
            },
            "vpc_id": "vpc-0b51494f3322647ad"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-092990349f87be027",
            "owner_id": "425301710226",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d7233f8fd93a7c79",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-route-private-subnet-2"
            },
            "vpc_id": "vpc-0b51494f3322647ad"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f7d23a18113a7fcf",
            "owner_id": "425301710226",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0bb0dd0121b23aece",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-private-subnet-1"
            },
            "vpc_id": "vpc-075895e8d932a23f9"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-001d077389e54d36e",
            "owner_id": "425301710226",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f5b97a7f512c2dbb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-private-subnet-2"
            },
            "vpc_id": "vpc-075895e8d932a23f9"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ee6c86d34947b090",
            "owner_id": "425301710226",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e0fd3e3cedd77ec8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-private-subnet-3"
            },
            "vpc_id": "vpc-075895e8d932a23f9"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-uat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06d70dab83afef489",
            "owner_id": "425301710226",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f471eff76aa2d00",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-route-public-subnets"
            },
            "vpc_id": "vpc-0b51494f3322647ad"
          },
          "depends_on": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04ee6beea7278239a",
            "owner_id": "425301710226",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e0c9af0443046c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-public-subnets"
            },
            "vpc_id": "vpc-075895e8d932a23f9"
          },
          "depends_on": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-uat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ff751f781a94fca",
            "route_table_id": "rtb-02fa8095573a4ac74",
            "subnet_id": "subnet-0227044496e1abedc"
          },
          "depends_on": [
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea6cfe5729d52c5a",
            "route_table_id": "rtb-092990349f87be027",
            "subnet_id": "subnet-021668bea37bc96dc"
          },
          "depends_on": [
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9723cb9a7cd0eb9",
            "route_table_id": "rtb-0f7d23a18113a7fcf",
            "subnet_id": "subnet-07a52f04f31e5dfcd"
          },
          "depends_on": [
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3064a1db711cd17",
            "route_table_id": "rtb-001d077389e54d36e",
            "subnet_id": "subnet-040de168ffb543c77"
          },
          "depends_on": [
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd299277b6472710",
            "route_table_id": "rtb-0ee6c86d34947b090",
            "subnet_id": "subnet-0823c065b68cf0cd6"
          },
          "depends_on": [
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-uat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c72fd06d7cf21cc",
            "route_table_id": "rtb-06d70dab83afef489",
            "subnet_id": "subnet-070582c2dab76ea73"
          },
          "depends_on": [
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a4cf591f3726ad6",
            "route_table_id": "rtb-06d70dab83afef489",
            "subnet_id": "subnet-046eb021e421fb421"
          },
          "depends_on": [
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07187f488df469981",
            "route_table_id": "rtb-06d70dab83afef489",
            "subnet_id": "subnet-0f5b9d2d390584c0e"
          },
          "depends_on": [
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec13999d2a73816d",
            "route_table_id": "rtb-04ee6beea7278239a",
            "subnet_id": "subnet-0c6f9062c766243f1"
          },
          "depends_on": [
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d9760f029aa4373",
            "route_table_id": "rtb-04ee6beea7278239a",
            "subnet_id": "subnet-0c826456b502ed673"
          },
          "depends_on": [
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dd2db38cd712c8b",
            "route_table_id": "rtb-04ee6beea7278239a",
            "subnet_id": "subnet-068f2b2dea9ebfa88"
          },
          "depends_on": [
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-uat",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:subnet/subnet-0227044496e1abedc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.100.11.0/24",
            "id": "subnet-0227044496e1abedc",
            "map_public_ip_on_launch": false,
            "owner_id": "425301710226",
            "tags": {
              "Name": "uat-private-1"
            },
            "vpc_id": "vpc-0b51494f3322647ad"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:subnet/subnet-021668bea37bc96dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.100.12.0/24",
            "id": "subnet-021668bea37bc96dc",
            "map_public_ip_on_launch": false,
            "owner_id": "425301710226",
            "tags": {
              "Name": "uat-private-2"
            },
            "vpc_id": "vpc-0b51494f3322647ad"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:subnet/subnet-07a52f04f31e5dfcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-07a52f04f31e5dfcd",
            "map_public_ip_on_launch": false,
            "owner_id": "425301710226",
            "tags": {
              "Name": "dev-private-1"
            },
            "vpc_id": "vpc-075895e8d932a23f9"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:subnet/subnet-040de168ffb543c77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-040de168ffb543c77",
            "map_public_ip_on_launch": false,
            "owner_id": "425301710226",
            "tags": {
              "Name": "dev-private-2"
            },
            "vpc_id": "vpc-075895e8d932a23f9"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:subnet/subnet-0823c065b68cf0cd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.13.0/24",
            "id": "subnet-0823c065b68cf0cd6",
            "map_public_ip_on_launch": false,
            "owner_id": "425301710226",
            "tags": {
              "Name": "dev-private-3"
            },
            "vpc_id": "vpc-075895e8d932a23f9"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-uat",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:subnet/subnet-070582c2dab76ea73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.100.1.0/24",
            "id": "subnet-070582c2dab76ea73",
            "map_public_ip_on_launch": true,
            "owner_id": "425301710226",
            "tags": {
              "Name": "uat-public-1"
            },
            "vpc_id": "vpc-0b51494f3322647ad"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:subnet/subnet-046eb021e421fb421",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.100.2.0/24",
            "id": "subnet-046eb021e421fb421",
            "map_public_ip_on_launch": true,
            "owner_id": "425301710226",
            "tags": {
              "Name": "uat-public-2"
            },
            "vpc_id": "vpc-0b51494f3322647ad"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:subnet/subnet-0f5b9d2d390584c0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.100.3.0/24",
            "id": "subnet-0f5b9d2d390584c0e",
            "map_public_ip_on_launch": true,
            "owner_id": "425301710226",
            "tags": {
              "Name": "uat-public-3"
            },
            "vpc_id": "vpc-0b51494f3322647ad"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:subnet/subnet-0c6f9062c766243f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c6f9062c766243f1",
            "map_public_ip_on_launch": true,
            "owner_id": "425301710226",
            "tags": {
              "Name": "dev-public-1"
            },
            "vpc_id": "vpc-075895e8d932a23f9"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:subnet/subnet-0c826456b502ed673",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c826456b502ed673",
            "map_public_ip_on_launch": true,
            "owner_id": "425301710226",
            "tags": {
              "Name": "dev-public-2"
            },
            "vpc_id": "vpc-075895e8d932a23f9"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:subnet/subnet-068f2b2dea9ebfa88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-068f2b2dea9ebfa88",
            "map_public_ip_on_launch": true,
            "owner_id": "425301710226",
            "tags": {
              "Name": "dev-public-3"
            },
            "vpc_id": "vpc-075895e8d932a23f9"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-uat",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:vpc/vpc-0b51494f3322647ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0ff378ae9c2269df8",
            "default_route_table_id": "rtb-06fd3d74b721ebc95",
            "default_security_group_id": "sg-093378dfce2a2925e",
            "dhcp_options_id": "dopt-06c12d6c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b51494f3322647ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06fd3d74b721ebc95",
            "owner_id": "425301710226",
            "tags": {
              "Name": "uat-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:425301710226:vpc/vpc-075895e8d932a23f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a377c857074d819",
            "default_route_table_id": "rtb-05711e035994f9b00",
            "default_security_group_id": "sg-0ac6bb2e410841a3c",
            "dhcp_options_id": "dopt-06c12d6c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-075895e8d932a23f9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05711e035994f9b00",
            "owner_id": "425301710226",
            "tags": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}